Dodata stranica about us

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
     <p>Prvi pasus</p>
     <p>Drugi pasus</p>
+    <img src="./image/NoviSad.jpg" alt="novi sad slika" width="300px">
     
 </body>
 </html>
